# ChipMind

./: .dockerignore  .env.example  .gitignore  AUTHORS  CONTRIBUTING.md  DATA.md  Dockerfile  LICENSE  Makefile  README.md  SETUP_INSTRUCTIONS.md  debug_crash.py  docker-compose.yml  pyproject.toml  test_buggy.v  test_cli_load.py  test_iv.py  test_two.py  testing_indepth.md
.github/: CODEOWNERS  GITHUB_SETUP.md  OWNERSHIP_CHECKLIST.md  PULL_REQUEST_TEMPLATE.md  REPO_CHECKLIST.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: test.yml
chipmind/: __init__.py  cli.py  config.py
chipmind/agents/: __init__.py  code_generator.py  compiler_gate.py  error_classifier.py  graph.py  spec_analyzer.py  state.py  testbench_generator.py
chipmind/agents/prompts/: __init__.py  code_generator.txt  debug_fix.txt  spec_analyzer.txt  (+1 more)
chipmind/api/: __init__.py  main.py  schemas.py
chipmind/evaluation/: __init__.py  analyze_format.py  analyze_rag.py  run_eval.py  verilog_eval_loader.py  verilog_eval_runner.py
chipmind/ingestion/: __init__.py  build_index.py  doc_chunker.py  ingest_all.py  verilog_chunker.py
chipmind/retrieval/: __init__.py  hybrid_retriever.py  keyword_retriever.py  semantic_retriever.py
data/scripts/: download_verilog_eval.py  download_verilogdb.py  extract_verilog_modules.py  scrape_eda_docs.py
frontend/: app.py
output/: design_0.v
scripts/: setup-github.sh
tests/: test_code_generator.py  test_compiler_gate.py  test_config.py  test_e2e.py  test_retrieval.py  test_spec_analyzer.py  test_state.py
(+4 files in other folders)
