[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chipmind"
version = "0.1.0"
description = "ChipMind - AI-powered chip design assistant"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "langchain>=0.3.0",
    "langgraph>=0.2.0",
    "langsmith>=0.1.0",
    "faiss-cpu>=1.7.4",
    "rank-bm25>=0.2.2",
    "sentence-transformers>=3.0.0",
    "openai>=1.40.0",
    "groq>=0.11.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "streamlit>=1.38.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.0.0",
    "beautifulsoup4>=4.12.0",
    "httpx>=0.27.0",
    "pandas>=2.2.0",
    "rich>=13.0.0",
    "huggingface-hub>=0.25.0",
    "pyarrow>=14.0.0",
    "datasets>=2.18.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["chipmind*"]

[tool.pytest.ini_options]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]
